test/fails/bad_parsing/tag_out_of_order.lgl
print 5;
tag s is vec2;
print [vec2];